Modify according to spec
